[package]
name = "investigation_of_channels_in_tonic"
build = "build.rs"
edition = "2021"

[profile.release]
lto = "fat"  # Use "thin" or "fat" depending on your needs

[dependencies]
prost = "0.13.2"
async-lock = "3.3.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["codegen", "prost", "transport"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost", "transport"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
