[package]
name = "test_multi_contract"
edition = "2021"

[dependencies]
alloy = { version = "0.9.2", default-features = false }
alloy-sol-types = "0.8.18"
anyhow = "1.0.80"
bcs = "0.1.6"
futures = "0.3.31"
hex = "0.4.3"
linera-views = { version = "0.13.1", features = ["test"] }
linera-client = { version = "0.13.1", features = [] }
revm = { version = "19.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tempfile = "3.2.0"

[[bin]]
name = "main_contract_test"
path = "src/main.rs"
