[package]
name = "test_multi_contract"
edition = "2021"

[dependencies]
alloy-sol-types = "0.8.18"
anyhow = "1.0.80"
hex = "0.4.3"
revm = "19.2.0"
revm-precompile = "16.0.0"
revm-primitives = "15.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tempfile = "3.2.0"

[[bin]]
name = "main_contract_test"
path = "src/main.rs"
